--- a/Alarm/packages.config
+++ b/Alarm/packages.config
@@ -2,10 +2,6 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net40" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net40" />
+  <package id="LiteDB" version="3.1.0" targetFramework="net40" />
   <package id="Quartz" version="2.5.0" targetFramework="net40" />
-  <package id="System.Data.SQLite" version="1.0.105.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.EF6" version="1.0.105.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.Linq" version="1.0.105.0" targetFramework="net40" />
 </packages>
