--- a/Alarm/App.config
+++ b/Alarm/App.config
@@ -1,36 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <!--<configSections>
-        <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral,PublicKeyToken=b77a5c561934e089" />
-    </configSections>
-    <quartz>
-        <add key="quartz.scheduler.instanceName" value="DefaultQuartzScheduler" />
-        <add key="quartz.scheduler.instanceId" value="Quartz" />
-        <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
-        <add key="quartz.threadPool.threadCount" value="10" />
-
-        <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
-        <add key="quartz.jobStore.misfireThreshold" value="60000" />
-
-        <add key="quartz.jobStore.lockHandler.type" value="Quartz.Impl.AdoJobStore.UpdateLockRowSemaphore, Quartz" />
-        <add key="quartz.jobStore.useProperties" value="true" />
-        <add key="quartz.jobStore.dataSource" value="default" />
-        <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
-        <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SQLiteDelegate, Quartz" />
-        <add key="quartz.dataSource.default.provider" value="SQLite-10" />
-        <add key="quartz.dataSource.default.connectionString" value="Data Source=data-jobs.db;Version=3;Foreign Keys=ON;" />
-    </quartz>
-    <runtime>
-        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-            <dependentAssembly>
-                <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-                <bindingRedirect oldVersion="1.0.88.0" newVersion="1.0.105.0" />
-            </dependentAssembly>
-
-        </assemblyBinding>
-    </runtime>-->
-
-    <appSettings>
-        <add key="connection" value="data.db"/>
-    </appSettings>
+  <appSettings>
+    <add key="connection" value="data.db" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <connectionStrings>
+    <add name="mydata" connectionString="Data Source=mydata.sqlite" providerName="SQLite" />
+  </connectionStrings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
