--- a/Alarm/Alarm.csproj
+++ b/Alarm/Alarm.csproj
@@ -84,6 +84,9 @@
     <Compile Include="Control\EditTaskControl.xaml.cs">
       <DependentUpon>EditTaskControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Control\DropDatePicker.xaml.cs">
+      <DependentUpon>DropDatePicker.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Control\ListTaskControl.xaml.cs">
       <DependentUpon>ListTaskControl.xaml</DependentUpon>
     </Compile>
@@ -99,6 +102,10 @@
     <Page Include="Control\EditTaskControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Control\DropDatePicker.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Control\ListTaskControl.xaml">
       <SubType>Designer</SubType>
@@ -168,6 +175,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
