分开触发器和任务

--- a/Alarm/Alarm.csproj
+++ b/Alarm/Alarm.csproj
@@ -78,6 +78,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CommonLib\CronExpession.cs" />
+    <Compile Include="CommonLib\IJobEntity.cs" />
     <Compile Include="Control\AddOrUpdateWin.xaml.cs">
       <DependentUpon>AddOrUpdateWin.xaml</DependentUpon>
     </Compile>
