--- a/Alarm/App.config
+++ b/Alarm/App.config
@@ -4,5 +4,6 @@
         <add key="connection" value="data.db" />
         <add key="ClientSettingsProvider.ServiceUri" value="" />
         <add key="passwd" value="123456"/>
+        <add key="Topmost" value="false"/>
     </appSettings>
 </configuration>
