--- a/Alarm/packages.config
+++ b/Alarm/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net40" />
+  <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net40" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net40" />
   <package id="LiteDB" version="3.1.0" targetFramework="net40" />
   <package id="Quartz" version="2.5.0" targetFramework="net40" />
